Encrypt all the networks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,9 @@ services:
 
 networks:
   public:
+    driver: overlay
+    driver_opts:
+      encrypted: "true"
   private:
     driver: overlay
     driver_opts:
